--- a/LexiconLMS/Client/LexiconLMS.Client.csproj
+++ b/LexiconLMS/Client/LexiconLMS.Client.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\IDeviceDataService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Components\NewFile.txt" />
+    <None Remove="Pages\NewFile.txt" />
+    <None Remove="Services\ICourseDataService" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.13" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="7.0.13" />
