--- a/LexiconLMS/Client/LexiconLMS.Client.csproj
+++ b/LexiconLMS/Client/LexiconLMS.Client.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\Shared\LexiconLMS.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\" />
+  </ItemGroup>
+
 </Project>
