Changed GenericDataService, added AutoMapper and added one Dto for module and activity.

--- a/LexiconLMS/Server/LexiconLMS.Server.csproj
+++ b/LexiconLMS/Server/LexiconLMS.Server.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Bogus" Version="35.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.13" />
     <PackageReference Include="Microsoft.OpenApi" Version="1.6.11" />
