--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,9 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
+# Ignore .SCSS files
+*.scss linguist-vendored
+
 
 ###############################################################################
 # Set default behavior for command prompt diff.
