--- a/.gitattributes
+++ b/.gitattributes
@@ -2,9 +2,11 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
+
 # Ignore .SCSS files
 *.scss linguist-vendored
-
+LexiconLMS/Client/wwwroot/lib/** linguist-vendored
+LexiconLMS/Server/wwwroot/lib/** linguist-vendored
 
 ###############################################################################
 # Set default behavior for command prompt diff.
