Add MailService + MailData + MailSettings

--- a/LexiconLMS/Server/appsettings.json
+++ b/LexiconLMS/Server/appsettings.json
@@ -15,5 +15,13 @@
       }
     }
   },
+  "MailSettings": {
+    "Host": "smtp-mail.outlook.com",
+    "Port": 587,
+    "SenderName": "Your sender name",
+    "SenderEmail": "Your sender email",
+    "UserName": "Your username",
+    "Password": "Your password"
+  },
   "AllowedHosts": "*"
 }
