--- a/LexiconLMS/Server/appsettings.json
+++ b/LexiconLMS/Server/appsettings.json
@@ -18,10 +18,10 @@
   "MailSettings": {
     "Host": "smtp-mail.outlook.com",
     "Port": 587,
-    "SenderName": "Your sender name",
-    "SenderEmail": "Your sender email",
-    "UserName": "Your username",
-    "Password": "Your password"
+    "SenderName": "teacher1@test.com",
+    "SenderEmail": "teacher1@test.com",
+    "UserName": "teacher1@test.com",
+    "Password": "!123qweASD"
   },
   "AllowedHosts": "*"
 }
