--- a/LexiconLMS/Server/appsettings.json
+++ b/LexiconLMS/Server/appsettings.json
@@ -18,10 +18,10 @@
   "MailSettings": {
     "Host": "smtp-mail.outlook.com",
     "Port": 587,
-    "SenderName": "teacher1@test.com",
-    "SenderEmail": "teacher1@test.com",
-    "UserName": "teacher1@test.com",
-    "Password": "!123qweASD"
+    "SenderName": "lmstest2024@outlook.com",
+    "SenderEmail": "lmstest2024@outlook.com",
+    "UserName": "lmstest2024@outlook.com",
+    "Password": "TestAdmin!123"
   },
   "AllowedHosts": "*"
 }
